<resources>
    <string name="app_name">TheMovieDb</string>
    <string name="popular_title">Popular</string>
    <string name="top_rated_title">Top rated </string>
    <string name="popular">popular</string>
    <string name="defaulter">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="Specific_movie">Specific movie</string>
    <string name="User_rating">User rating</string>
    <string name="Overview">Overview</string>
    <string name="Release_date">Release date</string>
    <string name="Favourites">Favourites</string>
    <string name="Star">Starred</string>
    <string name="Unstar">Remove favourite</string>
    <string name="Unstar_msg">Do you want to remove this movie from your favourites?</string>
    <string name="Reviews">Review</string>
    <string name="Trailers">Trailers</string>
    <string name="Space"> </string>
    <string name="connecton">No internet connectivity</string>
    <string name="hide_review">Hide review</string>
    <string name="movie_nav">Movies</string>
    <string name="series_nav">Series</string>
    <string name="rating_image">Rating image</string>
    <string name="previous">previous</string>
    <string name="page">page</string>
    <string name="next">next</string>
    <string name="movie_image">Movie_image</string>
    <string name="plot">Plot</string>
</resources>
