<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:scrollY="150dp"
    tools:context=".Movie"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:ignore="RtlSymmetry">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/m_iv"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/movie_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/cowboy" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/image_gradient"
            app:layout_constraintTop_toTopOf="@+id/m_iv"
            tools:layout_editor_absoluteX="30dp" />

        <TextView
            android:id="@+id/mn_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="288dp"
            tools:text="Movie name"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/ur_tv"
            />

        <TextView
            android:id="@+id/rd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/ur_tv"
            app:layout_constraintTop_toTopOf="@+id/mn_tv"
            tools:text="@string/Release_date" />

        <TextView
            android:id="@+id/ur_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="18dp"
            android:text="@string/User_rating"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rd_tv"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/plot"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/m_iv"
            app:layout_constraintTop_toBottomOf="@+id/m_iv" />

        <TextView
            android:id="@+id/ov_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="Here is a story of a young boy who inherits a sword and all the responsibilities with it" />

        <TextView
            android:id="@+id/review_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Reviews"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ov_tv" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/review_tv"
            tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:layout_editor_absoluteX="42dp"
            tools:listitem="@layout/reviewitems"
            tools:orientation="horizontal" />

        <TextView
            android:id="@+id/trailer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Trailers"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_rv" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/youtube_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/trailer_tv"
            tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:layout_editor_absoluteX="42dp"
            tools:listitem="@layout/trailer_items"
            tools:orientation="horizontal" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>